data/derived/sp14/progs/unify/prog2285.ml.out
Characters 126-139:
  | Sine(e1) -> let ans = sin(pi *. eval(e1,x,y)) in Printf.fprintf "sine is %f " 2.0
                                                                    ^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         out_channel
